<resources>
    <string name="app_name"><u>Task_to_do</u></string>
    <string name="details"><b>Enter Your details here</b></string>
    <string name="name">Enter Your Name Here</string>
    <string name="address">Enter Your Address Here</string>
    <string name="dd_mm_yyyy">DD/MM/YYYY</string>
    <string name="enter_your_phone_number">Enter Your Phone Number</string>
    <string name="register">Register</string>
    <string name="enter_your_date_of_birth">Enter Your Date Of Birth (DD/MM/YYYY)</string>
    <string name="ttd">TTD</string>
    <string name="pending_tasks">pending tasks</string>
    <string name="goals">Goals</string>
    <string name="my_details">My Details</string>
    <string name="profile">profile</string>
    <string name="logout">logout</string>
    <string name="social">Contact Us</string>
    <string name="linkedin">linkedIn</string>
    <string name="instagram">Instagram</string>
    <string name="facebook">Facebook</string>
    <string name="youtube">YouTube</string>
    <string name="navigation_drawer_open" />
    <string name="navigation_drawer_close" />
    <string name="add_task">Add Task</string>
    <string name="edit_text">Edit Text</string>
    <string name="delete_task">Delete Task</string>
    <string name="complete_task">All Tasks </string>
    <string name="total_task">Total Task:</string>
    <string name="enter_the_event_name">Enter the event name</string>
    <string name="description">Description</string>
    <string name="add_date_of_the_event">Add date of the event</string>
    <string name="add_time_of_the_event">Add time of the event</string>
    <string name="submit">Submit</string>
    <string name="home">Home</string>
    <string name="completed_task">Completed Task</string>
    <string name="total_completed_task">total Completed Task</string>
    <string name="enter_your_goal">Enter your goal</string>
    <string name="add_goal">Add Goal</string>
</resources>