<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Addtask"
    android:background="@drawable/bg2">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/light_lavender"
        android:fontFamily="@font/abhaya_libre"
        android:gravity="center"
        android:padding="20sp"
        android:text="@string/add_task"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/eventname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15sp"
        android:layout_marginStart="15sp"
        android:fontFamily="@font/abhaya_libre"
        android:text="@string/enter_the_event_name"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/edevename"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/enter_the_event_name"
        android:layout_marginStart="15sp"
        android:layout_marginBottom="20sp"
        android:layout_marginEnd="15sp"
        android:textSize="25sp"
        android:drawableStart="@drawable/outline_event_note_24"/>

    <TextView
        android:id="@+id/eventdec"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15sp"
        android:layout_marginStart="15sp"
        android:fontFamily="@font/abhaya_libre"
        android:text="@string/description"
        android:textSize="30sp" />
    <EditText
        android:id="@+id/etevendec"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/description"
        android:layout_marginStart="15sp"
        android:layout_marginBottom="20sp"
        android:layout_marginEnd="15sp"
        android:textSize="25sp"
        android:drawableStart="@drawable/baseline_notes_24"/>

    <TextView
        android:id="@+id/eventdate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15sp"
        android:layout_marginStart="15sp"
        android:fontFamily="@font/abhaya_libre"
        android:text="@string/add_date_of_the_event"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/et1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/add_date_of_the_event"
        android:layout_marginStart="15sp"
        android:layout_marginBottom="20sp"
        android:layout_marginEnd="15sp"
        android:textSize="25sp"
        android:drawableStart="@drawable/baseline_calendar_month_24"/>

    <TextView
        android:id="@+id/eventtime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15sp"
        android:layout_marginStart="15sp"
        android:fontFamily="@font/abhaya_libre"
        android:text="@string/add_time_of_the_event"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/eteventdate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/add_time_of_the_event"
        android:layout_marginStart="15sp"
        android:layout_marginBottom="20sp"
        android:layout_marginEnd="15sp"
        android:textSize="25sp"
        android:drawableStart="@drawable/twotone_access_time_24"/>

    <Button
        android:id="@+id/Sub1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:layout_margin="15sp"/>

    <Button
        android:id="@+id/back1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/home"
        android:layout_marginStart="15sp"
        android:layout_marginEnd="15sp"/>
</LinearLayout>