<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:background="@drawable/bg2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".first_screen">
    <!-- Main content view -->


    <!-- Navigation drawer view -->
    <com.google.android.material.navigation.NavigationView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/navbar"

        app:menu="@menu/nav_menu"
        android:fitsSystemWindows="true"
        android:layout_gravity="start"
        app:headerLayout="@layout/header"/>




    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
            android:padding="20sp"
            app:navigationIcon="@drawable/baseline_menu_24"/>




    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:id="@+id/hi"
            android:text=""
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/abhaya_libre"
            android:textSize="15sp"
            />
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="200sp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="15sp"
            android:fontFamily="serif-monospace"
            android:padding="5sp"
            android:text="@string/total_task"
            android:textSize="25sp"
            />
        <TextView
            android:id="@+id/total_task"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="15sp"
            android:fontFamily="serif-monospace"
            android:padding="5sp"
            android:text=""
            android:textSize="25sp"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="400dp">

        <Button
            android:id="@+id/add_task"
            android:layout_width="150sp"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:layout_margin="20sp"
           android:drawableStart="@drawable/baseline_add_24"
            android:padding="20sp"
            android:text="@string/add_task" />
        <Button
            android:id="@+id/comp"
            android:layout_width="150sp"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:layout_margin="20sp"
            android:drawableStart="@drawable/baseline_add_24"
            android:padding="20sp"
            android:text="@string/complete_task" />
    </LinearLayout>


</androidx.drawerlayout.widget.DrawerLayout>